<resources>
    <string name="app_name">PurplePlay</string>
    <string name="TermsAndCondition">Terms And Conditions</string>
    <string name="TC_1">Welcome to PurplePlay, an app that helps you easily watch movies and listen to music. In order to use the app, you will need to create an account. By creating an account and using the app, you agree to be bound by these terms and conditions.</string>
    <string name="TC_2"><b>Data Collection</b>PurplePlay collects personal information from you in order to provide you with the best possible experience. This includes information such as your name, email address in order to make the process easier, as well as any other information you choose to provide.PurplePlay does not display any advertising to you. </string>
    <string name="TC_3"><b>Device AccesseConstat</b>\n PurplePlay requires access to your device s camera in order to function properly. By using the app, you grant PurplePlay permission to access your device s camera.</string>
    <string name="TC_4"><b>Third-Party Integrations</b>\nPurplePlay uses a Node.js server to store and process data. By using the app, you agree to the collection, use, and sharing of your data as described in these terms and conditions.</string>
    <string name="TC_5"><b>Changes to These Terms</b>\nPurplePlay reserves the right to update these terms and conditions at any time. If we make any changes, we will post the revised terms and conditions on this page and will indicate the effective date of the revised terms and conditions. We encourage you to review these terms and conditions periodically to stay informed about our practices.</string>
    <string name="TC_6"><b>Contact Us</b>If you have any questions about these terms and conditions, please contact us at PurplePlay@esprit.tn</string>
    <string name="updatedDate">Update 5/5/2023</string>
    <string name="version">Version</string>
    <string name="versionNum">1.0.1</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password…</string>
    <string name="confirm_password">Confirm Password…</string>
    <string name="confirm">Confirm</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="insert_mail">Insert Mail</string>
    <string name="insert_email">Insert Email</string>
    <string name="next">Next</string>
    <string name="username">Username…</string>
    <string name="email">Email…</string>
    <string name="password">Password…</string>
    <string name="image_description">Image Description</string>
    <string name="select_image">Select Image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update">Update</string>
    <string name="dark_mode">Dark mode</string>
    <string name="remember_me">Remember Me</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="insert_otp">Insert OTP</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="arabic">Arabic</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="OverView">OverView</string>
    <string name="songs">Songs</string>
    <string name="Favorite">Favorite ♥</string>
    <string name="back">Back</string>
    <string name="start">00:00</string>
    <string name="end">Loading</string>
    <string name="repeat">Repeat</string>
    <string name="equalizer">Equalizer</string>
    <string name="share">Share</string>
    <string name="song_name">Song Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anonyme">ANONYME</string>
    <string name="comment">comment</string>
    <string name="your_feedback">Your FeedBack</string>
    <string name="post">Post</string>
    <string name="world_of_music">World Of Music</string>
    <string name="movies">Movies</string>
    <string name="popular_now">Popular Now</string>
    <string name="this_is_a_sample_message_that_will_appear">This is a sample message that will appear</string>
    <string name="welcome">Welcome !</string>
    <string name="music">Music</string>
    <string name="new_coming">New Coming</string>
    <string name="all">All</string>
    <string name="languages">Languages</string>
    <string name="general">General</string>
    <string name="_2_h_30_min">2 h 30 min</string>
    <string name="textview">TextView</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="perla">Perla 🤖</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="logout">Logout</string>
</resources>