<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.MovieHomeActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="394dp"
            android:layout_height="58dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/purple_app"
                android:text="@string/OverView"
                tools:layout_editor_absoluteX="14dp"
                tools:layout_editor_absoluteY="29dp" />

            <Button
                android:id="@+id/movies"
                android:layout_width="121dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/purple_app"
                android:text="@string/movies"
                tools:layout_editor_absoluteX="14dp"
                tools:layout_editor_absoluteY="29dp" />

            <Button
                android:id="@+id/fav"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/purple_app"
                android:text="@string/Favorite"
                tools:layout_editor_absoluteX="14dp"
                tools:layout_editor_absoluteY="29dp" />
        </LinearLayout>


        <TextView
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/popular_now"
            android:textColor="@color/white"

            ></TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieRecycleV"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>