<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
android:background="@drawable/playlist"
    tools:context=".ViewModel.PlaylistActivity"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="57dp"
            android:layout_height="52dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/vector">

        </ImageButton>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/world_of_music"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_weight="1"
            ></TextView>

        <ImageButton
            android:id="@+id/fav"
            android:layout_width="44dp"
            android:layout_height="52dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Favorite"
            android:src="@drawable/heart"
            app:tint="@color/red">


        </ImageButton>

    </LinearLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="356dp"
        android:layout_height="342dp"
        android:layout_margin="10dp"
        android:src="@drawable/cercle"
        app:strokeColor="@color/purple_button"></com.google.android.material.imageview.ShapeableImageView>

    <TextView
        android:id="@+id/songname"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/skipback"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:backgroundTint="@color/purple_app"
            android:src="@drawable/skip_forward"></ImageView>


        <ImageView
            android:id="@+id/pause"
            android:layout_width="77dp"
            android:layout_height="91dp"
            android:layout_marginHorizontal="25dp"

            android:backgroundTint="@color/purple_button"
            android:src="@drawable/play"

            ></ImageView>


        <ImageView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:backgroundTint="@color/purple_app"

            android:src="@drawable/skip_forward_fill"></ImageView>


    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="25dp"
    android:orientation="horizontal"
    android:layout_margin="20dp"
    android:layout_weight="1"
    >

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="00:00"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"></TextView>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:backgroundTint="@color/white"></androidx.appcompat.widget.AppCompatSeekBar>

    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="Loading.."
android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"></TextView>


</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat"
            android:src="@drawable/repeat"
            app:tint="@color/white"></ImageButton>

        <ImageButton
            android:id="@+id/graphic"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equalizer"
            android:src="@drawable/graphic"
            app:tint="@color/white"></ImageButton>

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"
            android:src="@drawable/share"
            app:tint="@color/white"></ImageButton>


    </LinearLayout>

</LinearLayout>