<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ViewModel.HomeFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_home"
    tools:layout_editor_absoluteX="39dp"
    tools:layout_editor_absoluteY="-1dp"
    tools:openDrawer="start"
    >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/purple_button"
        android:text="@string/welcome"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homebtn"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/homebtn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="@color/purple_button"
        android:text="@string/home"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/musicbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/musicbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_app"
        android:text="@string/music"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/moviebtn"
        app:layout_constraintStart_toEndOf="@+id/homebtn"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/moviebtn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/purple_app"
        android:text="@string/movies"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/musicbtn"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/musicbtn">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_coming"
            android:textColor="#685E5E" />

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lineSpacingExtra="1dp"
            android:text="@string/all"
            android:textColor="#348AF4" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="382dp"
        android:layout_height="189dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/frame_73" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="373dp"
        android:layout_height="191dp"
        android:layout_marginTop="236dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/frame_73" />





</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>