<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.InsertEmailActivity"
    android:background="@color/purple_200">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/purple_200"
        >
        <ImageView
            android:layout_width="350dp"
            android:layout_height="290dp"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logopurpleplay"
            tools:srcCompat="@drawable/logopurpleplay">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forgot_password"
            android:textSize="36sp"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            >
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/insert_mail"
            android:textSize="18dp"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            >
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeErrorColor="@color/purple_200"
            app:errorIconTint="@color/purple_200"
            app:errorTextColor="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconTint="@color/purple_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/insert_email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/next"
            android:textSize="20dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>